--- a/package/crds/sql.gcp.upbound.io_users.yaml
+++ b/package/crds/sql.gcp.upbound.io_users.yaml
@@ -881,6 +881,18 @@ spec:
                     - name
                     - namespace
                     type: object
+                  passwordWo:
+                    description: |-
+                      The password for the user. Can be updated. For Postgres
+                      instances this is a Required field, unless type is set to either CLOUD_IAM_USER
+                      or CLOUD_IAM_SERVICE_ACCOUNT. Don't set this field for CLOUD_IAM_USER
+                      and CLOUD_IAM_SERVICE_ACCOUNT user types for any Cloud SQL instance.
+                      Note: This property is write-only and will not be read from the API.
+                    type: string
+                  passwordWoVersion:
+                    description: The version of the password_wo. For more info see
+                      updating write-only attributes.
+                    type: number
                   project:
                     description: |-
                       The ID of the project in which the resource belongs. If it
@@ -1043,6 +1055,18 @@ spec:
                     - name
                     - namespace
                     type: object
+                  passwordWo:
+                    description: |-
+                      The password for the user. Can be updated. For Postgres
+                      instances this is a Required field, unless type is set to either CLOUD_IAM_USER
+                      or CLOUD_IAM_SERVICE_ACCOUNT. Don't set this field for CLOUD_IAM_USER
+                      and CLOUD_IAM_SERVICE_ACCOUNT user types for any Cloud SQL instance.
+                      Note: This property is write-only and will not be read from the API.
+                    type: string
+                  passwordWoVersion:
+                    description: The version of the password_wo. For more info see
+                      updating write-only attributes.
+                    type: number
                   project:
                     description: |-
                       The ID of the project in which the resource belongs. If it
@@ -1282,6 +1306,18 @@ spec:
                           type: object
                         type: array
                     type: object
+                  passwordWo:
+                    description: |-
+                      The password for the user. Can be updated. For Postgres
+                      instances this is a Required field, unless type is set to either CLOUD_IAM_USER
+                      or CLOUD_IAM_SERVICE_ACCOUNT. Don't set this field for CLOUD_IAM_USER
+                      and CLOUD_IAM_SERVICE_ACCOUNT user types for any Cloud SQL instance.
+                      Note: This property is write-only and will not be read from the API.
+                    type: string
+                  passwordWoVersion:
+                    description: The version of the password_wo. For more info see
+                      updating write-only attributes.
+                    type: number
                   project:
                     description: |-
                       The ID of the project in which the resource belongs. If it
