--- a/package/crds/sql.gcp.upbound.io_sourcerepresentationinstances.yaml
+++ b/package/crds/sql.gcp.upbound.io_sourcerepresentationinstances.yaml
@@ -90,9 +90,12 @@ spec:
                       Include only if SSL/TLS is used on the external server.
                     type: string
                   databaseVersion:
-                    description: |-
-                      The MySQL version running on your source database server.
-                      Possible values are: MYSQL_5_6, MYSQL_5_7, MYSQL_8_0, POSTGRES_9_6, POSTGRES_10, POSTGRES_11, POSTGRES_12, POSTGRES_13, POSTGRES_14.
+                    description: The MySQL, PostgreSQL or SQL Server (beta) version
+                      to use. Supported values include MYSQL_5_6, MYSQL_5_7, MYSQL_8_0,
+                      MYSQL_8_4, POSTGRES_9_6, POSTGRES_10, POSTGRES_11, POSTGRES_12,
+                      POSTGRES_13, POSTGRES_14, POSTGRES_15, POSTGRES_16, POSTGRES_17.
+                      Database Version Policies includes an up-to-date reference of
+                      supported versions.
                     type: string
                   dumpFilePath:
                     description: A file in the bucket that contains the data from
@@ -169,9 +172,12 @@ spec:
                       Include only if SSL/TLS is used on the external server.
                     type: string
                   databaseVersion:
-                    description: |-
-                      The MySQL version running on your source database server.
-                      Possible values are: MYSQL_5_6, MYSQL_5_7, MYSQL_8_0, POSTGRES_9_6, POSTGRES_10, POSTGRES_11, POSTGRES_12, POSTGRES_13, POSTGRES_14.
+                    description: The MySQL, PostgreSQL or SQL Server (beta) version
+                      to use. Supported values include MYSQL_5_6, MYSQL_5_7, MYSQL_8_0,
+                      MYSQL_8_4, POSTGRES_9_6, POSTGRES_10, POSTGRES_11, POSTGRES_12,
+                      POSTGRES_13, POSTGRES_14, POSTGRES_15, POSTGRES_16, POSTGRES_17.
+                      Database Version Policies includes an up-to-date reference of
+                      supported versions.
                     type: string
                   dumpFilePath:
                     description: A file in the bucket that contains the data from
@@ -417,9 +423,12 @@ spec:
                       Include only if SSL/TLS is used on the external server.
                     type: string
                   databaseVersion:
-                    description: |-
-                      The MySQL version running on your source database server.
-                      Possible values are: MYSQL_5_6, MYSQL_5_7, MYSQL_8_0, POSTGRES_9_6, POSTGRES_10, POSTGRES_11, POSTGRES_12, POSTGRES_13, POSTGRES_14.
+                    description: The MySQL, PostgreSQL or SQL Server (beta) version
+                      to use. Supported values include MYSQL_5_6, MYSQL_5_7, MYSQL_8_0,
+                      MYSQL_8_4, POSTGRES_9_6, POSTGRES_10, POSTGRES_11, POSTGRES_12,
+                      POSTGRES_13, POSTGRES_14, POSTGRES_15, POSTGRES_16, POSTGRES_17.
+                      Database Version Policies includes an up-to-date reference of
+                      supported versions.
                     type: string
                   dumpFilePath:
                     description: A file in the bucket that contains the data from
