fix(): fix domainmapping and servicesplittraffic

--- a/examples/appengine/v1beta1/domainmapping.yaml
+++ b/examples/appengine/v1beta1/domainmapping.yaml
@@ -8,5 +8,6 @@ metadata:
   name: domain-mapping
 spec:
   forProvider:
+    domainName: "domain-name"
     sslSettings:
-    - sslManagementType: AUTOMATIC
+      sslManagementType: AUTOMATIC
