feat: redis instance - Store serverCaCerts.[].cert to connection details
This adds the _Server CA Cert_ and _port_ to _Connection Details_.
Also change redis/v1beta1/cluster.yaml example to use TLS.

Fixes #429

Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/examples/cluster/redis/v1beta1/cluster.yaml
+++ b/examples/cluster/redis/v1beta1/cluster.yaml
@@ -9,7 +9,7 @@ metadata:
   name: cluster-ha
 spec:
   forProvider:
-    authorizationMode: AUTH_MODE_DISABLED
+    authorizationMode: AUTH_MODE_IAM_AUTH
     deletionProtectionEnabled: false
     nodeType: REDIS_SHARED_CORE_NANO
     pscConfigs:
@@ -21,9 +21,12 @@ spec:
     region: us-central1
     replicaCount: 1
     shardCount: 3
-    transitEncryptionMode: TRANSIT_ENCRYPTION_MODE_DISABLED
+    transitEncryptionMode: TRANSIT_ENCRYPTION_MODE_SERVER_AUTHENTICATION
     zoneDistributionConfig:
       mode: MULTI_ZONE
+  writeConnectionSecretToRef:
+    name: example-redis-cluster-secret
+    namespace: upbound-system
 
 ---
 
