--- a/examples/alloydb/v1beta1/instance.yaml
+++ b/examples/alloydb/v1beta1/instance.yaml
@@ -37,9 +37,10 @@ spec:
         name: example-secret
         namespace: upbound-system
     location: us-central1
-    networkSelector:
-      matchLabels:
-        testing.upbound.io/example-name: google_compute_network
+    networkConfig:
+      - networkSelector:
+          matchLabels:
+            testing.upbound.io/example-name: google_compute_network
 
 ---
 
