--- a/examples/compute/v1beta1/routerpeer.yaml
+++ b/examples/compute/v1beta1/routerpeer.yaml
@@ -7,6 +7,7 @@ kind: RouterPeer
 metadata:
   annotations:
     meta.upbound.io/example-id: compute/v1beta1/routerpeer
+    uptest.upbound.io/disable-import: "true"
   labels:
     testing.upbound.io/example-name: router_peer
   name: router-peer
