--- a/examples/dataproc/v1beta1/metastoreservice.yaml
+++ b/examples/dataproc/v1beta1/metastoreservice.yaml
@@ -7,6 +7,7 @@ kind: MetastoreService
 metadata:
   annotations:
     meta.upbound.io/example-id: dataproc/v1beta1/metastoreservice
+    uptest.upbound.io/timeout: "7200"
   labels:
     testing.upbound.io/example-name: default
   name: default
