--- a/examples/developerconnect/cluster/v1beta1/connectconnection.yaml
+++ b/examples/developerconnect/cluster/v1beta1/connectconnection.yaml
@@ -1,4 +1,8 @@
-apiVersion: developerconnect.gcp.m.upbound.io/v1beta1
+# SPDX-FileCopyrightText: 2025 The Crossplane Authors <https://crossplane.io>
+#
+# SPDX-License-Identifier: CC0-1.0
+
+apiVersion: developerconnect.gcp.upbound.io/v1beta1
 kind: ConnectConnection
 metadata:
   annotations:
@@ -7,7 +11,6 @@ metadata:
   labels:
     testing.upbound.io/example-name: my-connection
   name: my-connection
-  namespace: upbound-system
 spec:
   forProvider:
     githubConfig:
