--- a/examples/developerconnect/namespaced/v1beta1/connectaccountconnector.yaml
+++ b/examples/developerconnect/namespaced/v1beta1/connectaccountconnector.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 The Crossplane Authors <https://crossplane.io>
+#
+# SPDX-License-Identifier: CC0-1.0
+
 apiVersion: developerconnect.gcp.m.upbound.io/v1beta1
 kind: ConnectAccountConnector
 metadata:
