--- a/package/crds/developerconnect.gcp.upbound.io_connectgitrepositorylinks.yaml
+++ b/package/crds/developerconnect.gcp.upbound.io_connectgitrepositorylinks.yaml
@@ -192,6 +192,8 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                required:
+                - location
                 type: object
               initProvider:
                 description: |-
@@ -233,11 +235,6 @@ spec:
                       Please refer to the field effective_labels for all of the labels present on the resource.
                     type: object
                     x-kubernetes-map-type: granular
-                  location:
-                    description: Resource ID segment making up resource name. It identifies
-                      the resource within its parent collection as described in https://google.aip.dev/122.
-                      See documentation for resource type developerconnect.googleapis.com/GitRepositoryLink.
-                    type: string
                   project:
                     description: |-
                       The ID of the project in which the resource belongs.
@@ -335,10 +332,6 @@ spec:
               rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
                 || ''Update'' in self.managementPolicies) || has(self.forProvider.cloneUri)
                 || (has(self.initProvider) && has(self.initProvider.cloneUri))'
-            - message: spec.forProvider.location is a required parameter
-              rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
-                || ''Update'' in self.managementPolicies) || has(self.forProvider.location)
-                || (has(self.initProvider) && has(self.initProvider.location))'
           status:
             description: ConnectGitRepositoryLinkStatus defines the observed state
               of ConnectGitRepositoryLink.
